--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,35 @@
-name: Deploy to Render
+name: ML application
 
 on:
   push:
-    branches:
-      - master  
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: '3.x'  # Versão do Python que você está usando
-
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run Tests
-        run: |
-          pytest  # Comando para executar seus testes
-
-      - name: Deploy to Render
-        env:
-          RENDER_ACCESS_TOKEN: ${{ secrets.RENDER_ACCESS_TOKEN }}
-          RENDER_PROJECT_ID: seu_projeto_no_render
-        run: |
-          curl -X POST -H "Authorization: Bearer $RENDER_ACCESS_TOKEN" \
-               -F "branch=master" \
-               https://render.com/api/v1/projects/$RENDER_PROJECT_ID/deployments
-
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.8"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install flake8 #pytest pandas scikit-learn fastapi httpx
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Run server in background
+      run: uvicorn main:app &
+    - name: Test with pytest
+      run: |
+        pytest -vv
